--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,14 @@ authors = ["Aditya Mandal <mandaladitya1614@gmail.com>"]
 description = "A high-performance ray tracer with multiple preset scenes"
 license = "MIT"
 repository = "https://github.com/Aditya-1304/raytracer"
-keywords = ["raytracing", "graphics", "rendering", "3d"]
-categories = ["graphics", "multimedia"]
+keywords = ["raytracing", "graphics", "rendering", "3d", "cli"]
+categories = ["graphics", "multimedia", "visualization"]
+readme = "README.md"
 
 [dependencies]
 rand = "0.9.2"
 rayon = "1.11.0"
+
 
 [[bin]]
 name = "raytracer"
